--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,9 @@
 # Production context: All deploys to the main
 # repository branch will inherit these settings.
 [context.production]
-  command = "REACT_APP_STAGE=prod npm run build"
+  command = "REACT_APP_STAGE=dev npm run build"
+  # temporarily removed to always deploy to dev
+  # command = "REACT_APP_STAGE=prod npm run build"
 
 # Deploy Preview context: All Deploy Previews
 # will inherit these settings.
